# ui

./: AGENTS.md  README.md  TODO.md  package-lock.json  package.json
api/: README.md  pyproject.toml
api/labframe_api/: __init__.py  app.py  config.py
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/project/: create-project-dialog.tsx  delete-project-dialog.tsx  project-card.tsx  project-management-overlay.tsx  project-selector.tsx
web/components/samples/: parameter-value-editor.tsx  parameters-cell-editor.tsx  samples-page.tsx
web/components/settings/: settings-button.tsx  settings-overlay.tsx  settings-provider.tsx
web/components/theme/: theme-provider.tsx  theme-toggle.tsx
web/components/ui/: button.test.tsx  calendar.tsx  popover.tsx
web/docs/: CONFIG-DIRECTORY-DECISION.md  CONFIG-FILES-ANALYSIS.md  CONFIG-PHILOSOPHY.md  FINAL-REORGANIZATION.md  REORGANIZATION-COMPLETE.md  REORGANIZATION-SUMMARY.md  run.md
web/docs/testing/: AG-GRID-TESTING.md  CI-SETUP.md  README.md  REORGANIZATION-SUMMARY.md  VISUAL-REGRESSION.md
web/lib/: api.ts
web/lib/hooks/: use-database-changes.ts  use-history.ts  use-samples.test.tsx  use-samples.ts
web/scripts/: patch-node-util.js
web/tests/config/: playwright.config.ts  vitest.config.ts
web/tests/e2e/: accessibility.spec.ts  ag-grid-alignment.spec.ts  fixtures.ts  samples.spec.ts  visual-regression.spec.ts
web/tests/helpers/: setup.ts  utils.tsx
web/tests/helpers/mocks/: handlers.ts  (+1 more)
web/types/: ag-grid.d.ts
(+3 files in other folders)
